item/.err
144.c: In function 'void dfs(TreeNode*, int*, int*)':
144.c:18:15: error: 'NULL' was not declared in this scope
     if (root==NULL) return;
               ^~~~
144.c:18:15: note: 'NULL' is defined in header '<cstddef>'; did you forget to '#include <cstddef>'?
144.c:1:1:
+#include <cstddef>
 // 二叉树前序遍历，很简单
144.c:18:15:
     if (root==NULL) return;
               ^~~~
144.c:19:26: error: invalid use of incomplete type 'struct TreeNode'
     res[*returnSize]=root->val;
                          ^~
144.c:17:17: note: forward declaration of 'struct TreeNode'
 void dfs(struct TreeNode* root,int* returnSize,int* res){
                 ^~~~~~~~
144.c:21:13: error: invalid use of incomplete type 'struct TreeNode'
     dfs(root->left,returnSize,res);
             ^~
144.c:17:17: note: forward declaration of 'struct TreeNode'
 void dfs(struct TreeNode* root,int* returnSize,int* res){
                 ^~~~~~~~
144.c:22:13: error: invalid use of incomplete type 'struct TreeNode'
     dfs(root->right,returnSize,res);
             ^~
144.c:17:17: note: forward declaration of 'struct TreeNode'
 void dfs(struct TreeNode* root,int* returnSize,int* res){
                 ^~~~~~~~
144.c: In function 'int* preorderTraversal(TreeNode*, int*)':
144.c:26:22: error: 'malloc' was not declared in this scope
     int* res = (int*)malloc(sizeof(int)*100);
                      ^~~~~~
144.c:26:22: note: 'malloc' is defined in header '<cstdlib>'; did you forget to '#include <cstdlib>'?
144.c:1:1:
+#include <cstdlib>
 // 二叉树前序遍历，很简单
144.c:26:22:
     int* res = (int*)malloc(sizeof(int)*100);
                      ^~~~~~
